--- a/AL/AL.csproj
+++ b/AL/AL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Shared\Schemas\" />
+    <None Remove="Pages\Lessons\" />
+    <None Remove="Pages\About\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
   </ItemGroup>
 
@@ -19,4 +24,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.32" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Shared\Schemas\" />
+    <Folder Include="Pages\Lessons\" />
+    <Folder Include="Pages\About\" />
+  </ItemGroup>
 </Project>
